--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "electron-debug": "^0.1.0",
     "node-jsx": "^0.13.3",
-    "react": "^0.13.3"
+    "react": "^0.13.3",
+    "lodash": "^3.9.3"
   },
   "devDependencies": {
     "electron-packager": "^4.1.2",
